[gd_scene load_steps=26 format=3 uid="uid://bghlk20cvt4ed"]

[ext_resource type="Script" path="res://entities/enemies/amelia/Enemy.gd" id="1_du78g"]
[ext_resource type="Texture2D" uid="uid://q5hk0cpek5v3" path="res://entities/enemies/amelia/Amelia_16x16.png" id="3_ia4er"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w0c26"]
atlas = ExtResource("3_ia4er")
region = Rect2(48, 8, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1d2w"]
atlas = ExtResource("3_ia4er")
region = Rect2(288, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2cki"]
atlas = ExtResource("3_ia4er")
region = Rect2(304, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vepsb"]
atlas = ExtResource("3_ia4er")
region = Rect2(320, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mumm5"]
atlas = ExtResource("3_ia4er")
region = Rect2(336, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_owtx7"]
atlas = ExtResource("3_ia4er")
region = Rect2(352, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydcff"]
atlas = ExtResource("3_ia4er")
region = Rect2(368, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5elf"]
atlas = ExtResource("3_ia4er")
region = Rect2(0, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_smohq"]
atlas = ExtResource("3_ia4er")
region = Rect2(16, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_umsjs"]
atlas = ExtResource("3_ia4er")
region = Rect2(32, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_whk48"]
atlas = ExtResource("3_ia4er")
region = Rect2(48, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdgal"]
atlas = ExtResource("3_ia4er")
region = Rect2(64, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbfjs"]
atlas = ExtResource("3_ia4er")
region = Rect2(80, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_702uo"]
atlas = ExtResource("3_ia4er")
region = Rect2(96, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi8ci"]
atlas = ExtResource("3_ia4er")
region = Rect2(112, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_joee6"]
atlas = ExtResource("3_ia4er")
region = Rect2(128, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y70rw"]
atlas = ExtResource("3_ia4er")
region = Rect2(144, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_toskw"]
atlas = ExtResource("3_ia4er")
region = Rect2(160, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pksoi"]
atlas = ExtResource("3_ia4er")
region = Rect2(176, 72, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_w823c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0c26")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1d2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2cki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vepsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mumm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owtx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydcff")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5elf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smohq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umsjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whk48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdgal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbfjs")
}],
"loop": true,
"name": &"move_left_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_702uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi8ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joee6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y70rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toskw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pksoi")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a23d6"]
radius = 9.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76ql8"]
size = Vector2(15, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_qvqlk"]
radius = 100.0

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(0.75, 0.75)
collision_layer = 4
collision_mask = 41
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_du78g")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_w823c")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_a23d6")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_76ql8")

[node name="LineOfSight" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LineOfSight"]
visible = false
shape = SubResource("CircleShape2D_qvqlk")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_path_custom_point_size = 2.0

[node name="MovementTimer" type="Timer" parent="."]

[node name="PathFindingTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="LineOfSight" to="." method="enemy_sees_player"]
[connection signal="timeout" from="MovementTimer" to="." method="handle_idle_movement"]
[connection signal="timeout" from="PathFindingTimer" to="." method="make_path"]
